# harvester-api

./: .gitignore  README.md  convertJsonYaml.py  main.py  pyproject.toml  requirements.txt  run_arcgis.py  run_pasda.py
config/: arcgis.yaml  chicago-luna.yaml  hdx.yaml  iowa-library.yaml  iowa-sets.csv  isgs.yaml  ogmWisc.yaml  oregon-digital-maps.yaml  pasda.yaml  socrata.yaml  temp-iowa-sets.csv  university-washington-sets.csv  university-washington.yaml
data/: arcHubs.csv  pasda-search.html
extractors/: arcgis.py  base.py  pasda.py
harvesters/: arcgis.py  base.py  chicago_luna.py  hdx.py  howToWriteNewHarvester.md  hyrax.py  isgs.py  oai_qdc.py  ogmWisc.py  old_arcgis.py  old_base.py  old_pasda.py  orderofoperations.md  pasda.py  readme.md  socrata.py  template.sample.py  test_data.json  test_harvester.py
jobs/: arcgis.yaml  arcgis_hubs.yaml  pasda.yaml
reference_data/: spatial_counties.csv  spatial_nations.csv  spatial_us_states.csv  themes.csv
routers/: jobs.py  schema.py
schemas/: distribution_types.yaml  geobtaa_schema.csv  geobtaa_schema.yaml
scripts/: build_uploads.py  build_uploads_readme.md  check_geojsons.py  chicago_luna_convert_bboxes.py  chicago_luna_download.py  chicago_luna_social_science_crosswalk.py  download_json_list.py  hdx_download.py  input_with_ids.csv  json_dir_to_csv.py  matching_compare.py  nonmatching_compare.py  oai_download.py  output_with_ids.csv  readme.md  remediate_iowa.py  spatial_coverage_match.py
static/: arcgis.html  chicago-luna.html  hdx.html  index.html  isgs.html  ogmWisc.html  pasda.html  socrata.html
(+16 files in other folders)
